--- a/WebContent/resources/css/bluemixapp.css
+++ b/WebContent/resources/css/bluemixapp.css
@@ -31,6 +31,7 @@
 	text-align: left;
 	overflow: hidden;
 	display: inline-block;
+	vertical-align: top;
 }
 
 .contentContainer input.submitBtn {
@@ -119,6 +120,19 @@
 	float:left;
 }
 
+.contentContainer textarea {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	height: 60px;
+	margin-bottom: 10px;
+	border: 1px solid #B0B0B0;
+	width: 300px;
+	padding-left: 10px;
+	margin-top: 5px;
+	float:left;
+}
+
 .valueContainer {
 	float: left;
 }
@@ -135,6 +149,14 @@
 
 .resultContainer {
 	margin: 0 0 0 40px;
+	clear: both;
+    float: left;
+}
+
+.InfoContainer {
+	margin: 0 0 0 40px;
+	clear: both;
+    float: left;
 }
 
 .resultMessageContainer {
